client/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.videoWrapper {
  display: flex;
  flex-direction: column;
  background-color: coral;
  padding: 1rem;
}

.cardTop {
  display: flex;
  gap: 0.5rem;
  background-color: white;
  border-radius: 1.5rem;
}

.videoCommentsWrapper {
  display: flex;
  gap: 0.5rem;
}

.commentsSection {
  background-color: white;
  margin-top: 0.25rem;
  width: 70%;
  border-radius: 1.5rem;
  padding: 0.5rem;
  position: relative;
}

.commentsSectionBottomWrapper {
  display: flex;
  position: absolute;
  bottom: 0;
  width: 96%;
  background-color: white;
  border-radius: 1.5rem;
  margin-bottom: 1px;
}

